# PyDave

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE_NOTES.md  README.md  buildlibdave.md  pyproject.toml
docs/: architecture.md  discord-integration.md  roadmap.md  status.md
examples/: fingerprints.py  two_party_media.py
native_helpers/external_sender/: CMakeLists.txt  memory_bridge.cpp
source/pydave/: __init__.py  external_sender.py  fingerprints.py  native.py  paths.py
source/pydave/highlevel/: __init__.py  groups.py  media.py
tests/: test_fingerprints.py  test_group_flow_smoke.py  test_highlevel_groups.py  test_highlevel_media.py  test_native_loader.py  test_native_smoke.py  test_session_smoke.py  test_vendor_layout.py
